Make the tabs on the right to be visible again in firefox. fixes #25

--- a/src/collective/ploneide/ploneide/resources/ploneide.css
+++ b/src/collective/ploneide/ploneide/resources/ploneide.css
@@ -367,3 +367,9 @@ img.filesystem-icon {
     overflow: hidden;
     background-repeat: no-repeat;
 }
+
+.ui-tabs-panel {
+    clear: both;
+    float: left;
+    width: 100%;
+}
